[package]
name = "habot"
version = "0.1.0"
authors = ["pwlodarczyk92 <pwlodarczyk92@gmail.com>"]

[dependencies]
diesel = { version = "1.3.2", features = ["sqlite", "chrono"] }
dotenv = "0.13.0"
chrono = { version = "0.4.4", features = ["serde"] }
serenity = "0.5.4"
serde = "1.0.70"
itertools = "0.7.8"
failure = "0.1.1"
serde_derive = "1.0.70"
serde_json = "1.0.22"
rand = "0.5.3"
byteorder = "1.2.3"
shlex = "0.1.1"
